<resources>
    <string name="app_name">FinalMovieApp</string>
    <string name="action_settings">Settings</string>
    <string name="description">Movie Poster</string>
    <string name="title">Title :</string>
    <string name="released">Released :</string>
    <string name="rating">Rating :</string>
    <string name="overview">Overview :</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="share">share</string>
</resources>
